--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,397 @@
     box-sizing: border-box;
 }
 
+:root {
+    --header-gb: #10375C;
+}
+
 html {
     font-size: 62.5%;
 }
 
 body {
+    overflow-y: scroll;
     font-family: 'Sora', sans-serif;
     font-size: 1.6rem;
+}
+
+/* ================== COMMON ====================== */
+.container {
+    width: 1170px;
+    max-width: calc(100% - 48px);
+    margin: 0 auto;
+}
+
+a {
+    text-decoration: none;
+}
+
+.btn {
+    --height: 60px;
+    display: inline-block;
+    color: #fff;
+    background-color: #2E80CE;
+    border-radius: 30px;
+    line-height: var(--height);
+    /*can giua*/
+    min-width: 205px;
+    height: var(--height);
+    padding: 0px 21px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 1.6rem;
+}
+
+.btn:hover {
+    opacity: 0.9;
+}
+
+.section-heading {
+    color: #10375C;
+    font-size: 5rem;
+    font-weight: 600;
+    line-height: 6rem;
+    letter-spacing: -0.1rem;
+}
+
+.section-desc {
+    width: 468px;
+    color: #575F66;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 3rem;
+}
+
+/*================ HEADER TOP =================== */
+header {
+    padding-top: 30px;
+    min-height: 100vh;
+    background-color: var(--header-gb);
+}
+
+/*================ HEADER TOP =================== */
+.header-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    position: relative;
+    display: inline-flex;
+    font-size: 1rem;
+}
+
+.logo__circle::before,
+.logo__circle::after {
+    content: "";
+    border-radius: 50%;
+    display: inline-block;
+    /* Phải display cho nó*/
+}
+
+.logo__circle::before {
+    width: 3em;
+    height: 3em;
+    background-color: #2E80CE;
+}
+
+.logo__circle::after {
+    position: absolute;
+    width: 1.6em;
+    height: 1.6em;
+    background-color: #fff;
+    top: 1.1em;
+    left: 1.1em;
+    /* = 1,6 lan so voi font size cua the html*/
+
+}
+
+.logo__text {
+    line-height: 1.6em;
+    margin-left: 0.6em;
+    text-align: right;
+}
+
+.logo__brand {
+    color: #fff;
+    display: block;
+    font-size: 1.8em;
+    font-weight: 400;
+}
+
+.logo__brand--small {
+    font-size: 1.2em;
+    font-weight: 400;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+}
+
+.navbar__list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.action__login,
+.navbar__link {
+    padding: 4px 21px;
+    font-size: 1.6rem;
+    font-weight: 300;
+    color: #C9D2DA;
+}
+
+.navbar__link:hover,
+.navbar__link--active {
+    color: #fff;
+    text-shadow: 1px 0 0 currentColor;
+}
+
+
+.navbar__link--active::before {
+    content: "";
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: relative;
+    left: -8px;
+    top: -2px;
+}
+
+.action__signup {
+    display: inline-block;
+    min-width: 104px;
+    height: 44px;
+    line-height: 44px;
+}
+
+.action__login {
+    margin-right: 7px;
+}
+
+.hero {
+    margin-top: 76px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.hero__content {
+    width: 44.2%;
+    flex-shrink: 0;
+}
+
+.hero__heading {
+    /* margin-top: 60px; */
+    color: #fff;
+    font-size: 7rem;
+    font-weight: 600;
+    line-height: 8rem;
+    letter-spacing: -0.14rem;
+}
+
+.hero__desc {
+    margin-top: 22px;
+    color: #C9D2DA;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 3rem;
+}
+
+.hero__row {
+    margin-top: 38px;
+}
+
+.hero__phone {
+    margin-left: 38px;
+    color: #FFF;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 400;
+    line-height: 3rem;
+}
+
+.hero__media {
+    width: 45.6%;
+    display: flex;
+    justify-content: center;
+}
+
+.hero__images {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.hero__img {
+    width: 330px;
+    height: 540px;
+    border-radius: 6px;
+    object-fit: cover;
+}
+
+.hero__img:first-child {
+    position: relative;
+    right: -6px;
+}
+
+.hero__img:last-child {
+    width: 210px;
+    height: 410px;
+}
+
+/* =========== Service ================ */
+.service {
+    padding: 170px 0;
+}
+
+.service__heading {
+    text-align: center;
+}
+
+.service__desc {
+    margin-right: auto;
+    margin-left: auto;
+    width: 468px;
+    margin-top: 18px;
+    color: #575F66;
+    text-align: center;
+    font-size: 1.8rem;
+    font-weight: 300;
+    line-height: 3rem;
+}
+
+.service__row {
+    margin-top: 70px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.service__left {
+    width: 570px;
+    height: 570px;
+}
+
+.service__img {
+    border-radius: 12px;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.service__right {
+    width: 40%;
+}
+
+.service__list {
+    margin-top: 35px;
+}
+
+.service .service-item {
+    display: flex;
+    padding: 21px 18px 20px 22px;
+    transition: 0.25s;
+}
+
+.service-item:not(:first-child) {
+    margin-top: 21px;
+}
+
+.service-item__icon {
+    color: #10375C;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #EFF6FD;
+    margin-right: 50px;
+}
+
+.service-item__heading {
+    color: #10375C;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.service-item__desc {
+    margin-top: 8px;
+    color: #575F66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 2.8rem;
+}
+
+.service-item:hover {
+    box-shadow: 0px 14px 28px 0px rgba(0, 0, 0, 0.05);
+    border-radius: 10px;
+}
+
+.service-item:hover .service-item__icon {
+    background-color: #2E80CE;
+    color: #fff;
+}
+
+.service__btn {
+    margin-top: 70px;
+}
+
+/* ================== HOW IT WORKS =================== */
+.work {
+    background-color: #F6FBFF;
+    padding: 100px 0;
+}
+
+.work__desc {
+    margin-top: 18px;
+    margin-bottom: 86px;
+}
+
+.work__list {
+    display: flex;
+    gap: 30px;
+}
+
+.work .work-item {
+    border-radius: 4px;
+    padding: 43px;
+    border: 16px solid #EAF6FF;
+    transition: 0.25s;
+}
+
+.work-item__heading {
+    margin-top: 18px;
+    color: #10375C;
+    font-size: 2.6rem;
+    font-weight: 600;
+    line-height: 3.6rem;
+}
+
+.work-item__desc {
+    margin-top: 28px;
+    color: #575F66;
+    font-size: 1.6rem;
+    font-weight: 300;
+    line-height: 2.8rem;
+}
+
+.work-item__more {
+    display: block;
+    margin-top: 18px;
+    color: #2E80CE;
+    font-family: Sora;
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+
+.work-item:hover {
+    border-color: #2E80CE;
+    position: relative;
+    transform: translateY(-16px);
 }
